# aaki

./: CMakeLists.txt  LICENSE  README.md  aaki-config.cmake  main.cpp
test/: CMakeLists.txt  test_main.cpp
